Update dead links

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     <meta name="description" content="Elise Phung T, an Innovation enthusiast. A phoenix learning to fly.">
     <link rel="icon" href="img/red-heart.png">
-    <link rel="canonical" href="http://tnp1606.github.io/" />
+    <link rel="canonical" href="http://elisetnp.github.io/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Elise Phung T - Phoenix to fly" />
     <meta property="og:description" content="Elise Phung T, an Innovation enthusiast. A phoenix learning to fly." />
-    <meta property="og:url" content="http://tnp1606.github.io/" />
+    <meta property="og:url" content="http://elisetnp.github.io/" />
     <meta property="og:site_name" content="Elise Phung T" />
     <meta property="og:image" content="img/cherry-blossom-cover.png" />
     <meta name="twitter:card" content="summary" />
@@ -252,7 +252,7 @@ a:hover {
       <li><a href="https://www.linkedin.com/in/elisephungtran/" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
       <li><a href="https://codepen.io/tnp1606/" target="_blank"><i class="fa fa-codepen fa-2x"></i></a></i>
       </li>
-      <li><a href="https://github.com/tnp1606/" target="_blank"><i class="fa fa-github fa-2x"></i></a></i>
+      <li><a href="https://github.com/elisetnp/" target="_blank"><i class="fa fa-github fa-2x"></i></a></i>
       </li>
       <li><a href="/"><i class="fa fa-globe fa-2x"></i></a></i>
       </li>
@@ -265,7 +265,6 @@ a:hover {
     <ul>
       <li><i class="fa fa-envelope-o"></i> <span class="email"></span></li>
       <li><i class="fa fa-paper-plane-o"> </i> Paris area, France</li>
-      <li><i class="fa fa-heart-o"></i> Vietnam</li>
     </ul>
     <ul>
       <li class="pri-tag">Vietnamese</li>
