--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ a:hover {
     </div>
     <div class="degree">
      <h3>Master 2 | Network Industries and Digital Economy (IREN) <sup>2019 – 2020</sup></h3>
-      Paris-Dauphine University & University of Paris-Saclay
+      Paris-Dauphine University, Télécom Paris & University of Paris-Saclay
     </div>
     <div class="degree">
      <h3>Master 1 | Innovation, Entreprise, Society (IES) <sup>2018 – 2019 </sup></h3>
