--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ a:hover {
     <section class="block exp">
     <h2>Work Experience</h2>
     <div class="exp-item">
-      <h3>Apprentice in Data-Driven Marketing, Stellantis <sup>2020 - 2021</sup> </h3>
+      <h3>Data Engineering Apprentice - Data-Driven Marketing, Stellantis <sup>2020 - 2021</sup> </h3>
       <p>
       </p>
     </div><div class="exp-item">
