Try fixing unavailable images

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <meta name="author" content="Tran">
 
     <meta name="description" content="Elise Phung T, an Innovation enthusiast. A phoenix learning to fly.">
-    <link rel="icon" href="img/red-heart.png">
+    <link rel="icon" href="IMG/red-heart.png">
     <link rel="canonical" href="http://elisetnp.github.io/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Elise Phung T - Phoenix to fly" />
     <meta property="og:description" content="Elise Phung T, an Innovation enthusiast. A phoenix learning to fly." />
     <meta property="og:url" content="http://elisetnp.github.io/" />
     <meta property="og:site_name" content="Elise Phung T" />
-    <meta property="og:image" content="img/cherry-blossom-cover.png" />
+    <meta property="og:image" content="IMG/cherry-blossom-cover.png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Elise Phung T, an Innovation enthusiast. A phoenix learning to fly."/>
     <meta name="twitter:title" content="Elise Phung T - Phoenix to fly" />
-    <meta name="twitter:image" content="img/cherry-blossom-cover.png" />
+    <meta name="twitter:image" content="IMG/cherry-blossom-cover.png" />
 
     <title>Elise Phung T - Phoenix to fly</title>
 
@@ -223,7 +223,7 @@ a:hover {
   width: 100px;
   height: 100px;
   display: inline-block;
-  background-image: url(img/draw-1.png);
+  background-image: url(IMG/draw-1.png);
 }
 
     </style>
