--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 
     <meta name="author" content="Tran">
 
-    <meta name="description" content="Elise Phung T, an Innovation enthusiast. A phoenix learning to fly.">
+    <meta name="description" content="Elise Tran, an Innovation & Data enthusiast.">
     <link rel="icon" href="IMG/red-heart.png">
     <link rel="canonical" href="http://elisetnp.github.io/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Elise Phung T - Phoenix to fly" />
-    <meta property="og:description" content="Elise Phung T, an Innovation enthusiast. A phoenix learning to fly." />
+    <meta property="og:title" content="Elise Tran - Phoenix to fly" />
+    <meta property="og:description" content="Elise Tran, an Innovation & Data enthusiast." />
     <meta property="og:url" content="http://elisetnp.github.io/" />
-    <meta property="og:site_name" content="Elise Phung T" />
+    <meta property="og:site_name" content="Elise Tran" />
     <meta property="og:image" content="IMG/cherry-blossom-cover.png" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Elise Phung T, an Innovation enthusiast. A phoenix learning to fly."/>
-    <meta name="twitter:title" content="Elise Phung T - Phoenix to fly" />
+    <meta name="twitter:description" content="Elise Tran, an Innovation & Data enthusiast"/>
+    <meta name="twitter:title" content="Elise Tran" />
     <meta name="twitter:image" content="IMG/cherry-blossom-cover.png" />
 
-    <title>Elise Phung T - Phoenix to fly</title>
+    <title>Elise Tran</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -242,11 +242,11 @@ a:hover {
   <div class="profile"></div>
   <div class="name">
     <ul>
-      <li>Elise Phung TRAN</li>
-      <li style="font-size: 0.5em">(My name means Phoenix)</li>
+      <li>Elise TRAN</li>
+      <li style="font-size: 0.5em">(Data Engineer @ Free2move)</li>
     </ul>
   </div>
-  <h2 class="sm-name">Elise Phung TRAN<br>(My name means Phoenix)</h2>
+  <h2 class="sm-name">Elise TRAN<br>(Data Engineer @ Free2move)</h2>
   <div class="social">
     <ul>
       <li><a href="https://www.linkedin.com/in/elisephungtran/" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
