--- a/index.html
+++ b/index.html
@@ -272,6 +272,54 @@ a:hover {
       <li class="pri-tag">French</li>
     </ul>
   </section>
+
+  <section class="block exp">
+    <h2>Work Experience</h2>
+    <div class="exp-item">
+      <h3>Data Engineer, Free2move <sup>2021 - now</sup> </h3>
+      <p>
+      </p>
+    </div>
+    <div class="exp-item">
+      <h3>Data Engineering Apprentice - Data-Driven Marketing, Stellantis <sup>2020 - 2021</sup> </h3>
+      <p>
+      </p>
+    </div>
+    <div class="exp-item">
+      <h3>Research Intern, Télécom Paris <sup>2020</sup> </h3>
+      <p>
+      </p>
+    </div>
+    <div class="exp-item">
+      <h3>Research Assistant, RITM @ Paris-Sud University <sup>2019</sup> </h3>
+      <p>
+        Research work on digital platforms</p>
+      <p>Participant at the World Conference on Intellectual Capital for Communities: Artificial Intelligence.</p>
+    </div>
+    <div class="exp-item">
+      <h3>Business Analyst & Jr Project Manager, Amagumo Labs <sup>2017 – 2018</sup> </h3>
+      <p>
+        Assess project scope and business processes of clients </p><p>Translate requirements into software features, Quality Assurance & Quality Control</p><p> In charge of User Experience, User Interface design & WP projects 
+      </p>
+    </div>
+    <div class="exp-item">
+      <h3>Network Operations Center Specialist, IPSIP Group <sup>2016</sup> </h3>
+      <p>Manage and supervise the monitoring systems for B-process and Mailjet. 
+      </p>
+    </div><div class="exp-item">
+      <h3>Marketing assistant, International Languages and Country Studies Institute, UEH <sup>2015</sup> </h3>
+      <p>In charge of external communications & the TOEIC Test
+      </p>
+    </div><div class="exp-item">
+      <h3>Other jobs <sup>2010 – 2014</sup> </h3>
+      <p>Market research collaborator, Nielsen Vietnam, 2014   </p><p>Quality Control Specialist, Marketing Communications Co. Ltd, 2013 </p><p> Sales assistant, Orange Fashion, 2012 </p><p>Sales assistant, ABC Bakery Pham Ngu Lao, 2011</p><p> English interpreter, YAN NEWS, 2010
+      </p>
+    </div>
+    <div class="exp-item">
+      
+    </div>
+  </section>
+
   <section class="block edu">
     <h2>Education</h2>
     <div class="degree">
@@ -321,46 +369,7 @@ a:hover {
       <p>English Composition I | Duke University  </p>
     </div>
   </section>
-    <section class="block exp">
-    <h2>Work Experience</h2>
-    <div class="exp-item">
-      <h3>Data Engineering Apprentice - Data-Driven Marketing, Stellantis <sup>2020 - 2021</sup> </h3>
-      <p>
-      </p>
-    </div><div class="exp-item">
-      <h3>Research Intern, Télécom Paris <sup>2020</sup> </h3>
-      <p>
-      </p>
-    </div>
-    <div class="exp-item">
-      <h3>Research Assistant, RITM @ Paris-Sud University <sup>2019</sup> </h3>
-      <p>
-        Research work on digital platforms</p>
-      <p>Participant at the World Conference on Intellectual Capital for Communities: Artificial Intelligence.</p>
-    </div>
-    <div class="exp-item">
-      <h3>Business Analyst & Jr Project Manager, Amagumo Labs <sup>2017 – 2018</sup> </h3>
-      <p>
-        Assess project scope and business processes of clients </p><p>Translate requirements into software features, Quality Assurance & Quality Control</p><p> In charge of User Experience, User Interface design & WP projects 
-      </p>
-    </div>
-    <div class="exp-item">
-      <h3>Network Operations Center Specialist, IPSIP Group <sup>2016</sup> </h3>
-      <p>Manage and supervise the monitoring systems for B-process and Mailjet. 
-      </p>
-    </div><div class="exp-item">
-      <h3>Marketing assistant, International Languages and Country Studies Institute, UEH <sup>2015</sup> </h3>
-      <p>In charge of external communications & the TOEIC Test
-      </p>
-    </div><div class="exp-item">
-      <h3>Other jobs <sup>2010 – 2014</sup> </h3>
-      <p>Market research collaborator, Nielsen Vietnam, 2014   </p><p>Quality Control Specialist, Marketing Communications Co. Ltd, 2013 </p><p> Sales assistant, Orange Fashion, 2012 </p><p>Sales assistant, ABC Bakery Pham Ngu Lao, 2011</p><p> English interpreter, YAN NEWS, 2010
-      </p>
-    </div>
-    <div class="exp-item">
-      
-    </div>
-  </section>
+  
 
   <section class="block edu">
     <h2>Activities & volunteer work</h2>
@@ -398,7 +407,7 @@ a:hover {
   <section class="block skills">
     <h2>Toolbox</h2>
     <ul>
-      <li class="pri-tag">Data Science</li>
+      <li class="pri-tag">Data Engineering</li>
       <li class="sec-tag">Python</li>
       <li class="sec-tag">Jupyter notebooks</li>
       <li class="sec-tag">pandas</li>
@@ -432,8 +441,7 @@ a:hover {
     <ul>
       <li class="pri-tag">Reading</li>
       <li class="pri-tag">Writing</li>
-      <li class="sec-tag">Drawing</li>
-      <li class="sec-tag">Photography</li>
+      <li class="sec-tag">Pragmatic Programming</li>
       <li class="pri-tag">Social Psychology</li>
       <li class="pri-tag">Research</li>
       <li class="pri-tag">Data Science</li>
