Quick update index.html

--- a/index.html
+++ b/index.html
@@ -409,16 +409,16 @@ a:hover {
     <ul>
       <li class="pri-tag">Data Engineering</li>
       <li class="sec-tag">Python</li>
-      <li class="sec-tag">Jupyter notebooks</li>
-      <li class="sec-tag">pandas</li>
-      <li class="sec-tag">NumPy</li>
-      <li class="sec-tag">Matplotlib</li>
-      <li class="sec-tag">scikit learn</li>
-      <li class="sec-tag">NLTK</li>
-      <li class="sec-tag">Github</li>
+      <li class="sec-tag">Airflow</li>
+      <li class="sec-tag">Docker</li>
+      <li class="sec-tag">Kubernetes</li>
+      <li class="sec-tag">Gitlab</li>
       <li class="sec-tag">SQL</li>
-      <li class="sec-tag">Google Cloud Platform</li>
-      <li class="sec-tag">Splunk</li>
+      <li class="sec-tag">scripting</li>
+      <li class="sec-tag">optimization</li>
+      <li class="sec-tag">AWS</li>
+      <li class="sec-tag">GCP</li>
+
     </br>
       <li class="pri-tag">Web Design</li>
       <li class="sec-tag">HTML</li>
@@ -429,11 +429,7 @@ a:hover {
       <li class="sec-tag">SEO</li>
       <li class="sec-tag">UX</li>
       <li class="sec-tag">UI</li>
-      <li class="sec-tag">Gimp</li>
-    </br>
-      <li class="pri-tag">Project Management</li>
-      <li class="sec-tag">Gantt chart</li>
-      <li class="sec-tag">Microsoft Office</li>
+
     </ul>
   </section>
   <section class="block skills">
