feat: update recent job 20231213

--- a/index.html
+++ b/index.html
@@ -277,6 +277,13 @@ a:hover {
     <h2>Work Experience</h2>
     <div class="exp-item">
       <h3>Data Engineer, Free2move <sup>2021 - now</sup> </h3>
+      <p>• Data ingestion, transformation, orchestration (Airflow - full ownership) </p>
+      <p>• Data warehousing (PostgreSQL) & optimization </p>
+      <p>• Data visualization tool incident treatment </p>
+      <p>• Data product deployment (Python, docker, Kubernetes, Gitlab CI/CD) and documentation </p>
+      <p><a href="https://github.com/elisetnp/airflow_monitoring/tree/main" target="_blank">
+        • Demo on Airflow Monitoring
+      </a></p>
       <p>
       </p>
     </div>
