--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         PPPPPPPPPPPPPP        PPP        
         PPPPPPPPPPPPPP        PPP       
     	
-    Hello, glad you're here !
+    Hello, is it me you're looking for ?? :>
 	
 	-->
 
@@ -42,6 +42,9 @@
 
   <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css'>
 
+<!--
+ ===========	START CSS ===========	
+	-->
       <style>
       @charset "UTF-8";
 @import url(https://fonts.googleapis.com/earlyaccess/cwtexyen.css);
@@ -227,16 +230,13 @@ a:hover {
 }
 
     </style>
-
-  
-  
-  
-  
-
 </head>
 
 <body translate="no" >
 
+<!--
+ ===========	START BANNER ===========	
+	-->
   <section class="heading">
   <h1>Curriculum Vitae</h1>
   <div class="profile"></div>
@@ -260,6 +260,10 @@ a:hover {
   </div>
 </section>
 <div class="wrapper">
+
+<!--
+ ===========	START GENERAL INFO ===========	
+	-->
   <section class="block info">
     <h2>Personal Information</h2>
     <ul>
@@ -273,6 +277,9 @@ a:hover {
     </ul>
   </section>
 
+<!--
+ ===========	START EXP ===========	
+	-->
   <section class="block exp">
     <h2>Work Experience</h2>
     <div class="exp-item">
@@ -327,6 +334,9 @@ a:hover {
     </div>
   </section>
 
+<!--
+ ===========	START EDUCATION ===========	
+	-->
   <section class="block edu">
     <h2>Education</h2>
     <div class="degree">
@@ -367,7 +377,7 @@ a:hover {
     </div>
     <div class="degree">
       <h3>Online courses</h3>
-      <p><b>MicroMasters® Program in Data Science | UCSanDiegoX (Ongoing) </b></p>
+      <p>MicroMasters® Program in Data Science | UCSanDiegoX</p>
       <p>The Data Scientist’s Toolbox | Johns Hopkins University </p>
       <p>Introduction to Psychology | University of Toronto</p>
       <p>Learning how to learn | University of California, San Diego </p>
@@ -411,18 +421,22 @@ a:hover {
       </p>
     </div>
   </section>
+
+<!--
+ ===========	START TOOLBOX ===========	
+	-->
   <section class="block skills">
     <h2>Toolbox</h2>
     <ul>
-      <li class="pri-tag">Data Engineering</li>
-      <li class="sec-tag">Python</li>
-      <li class="sec-tag">Airflow</li>
+      <li class="pri-tag">Airflow</li>
+      <li class="pri-tag">Python</li>
+      <li class="pri-tag">Database Management</li>
       <li class="sec-tag">Docker</li>
       <li class="sec-tag">Kubernetes</li>
       <li class="sec-tag">Gitlab</li>
       <li class="sec-tag">SQL</li>
-      <li class="sec-tag">scripting</li>
-      <li class="sec-tag">optimization</li>
+      <li class="sec-tag">Designing</li>
+      <li class="sec-tag">Optimization</li>
       <li class="sec-tag">AWS</li>
       <li class="sec-tag">GCP</li>
 
@@ -463,7 +477,7 @@ a:hover {
     <h3>Ms. Tran Ha Quyen</h3>
     <p>Instructor <a href="http://www.ueh.edu.vn/default_en.aspx" target="_blank">@ School of Economic Mathematics and Statistics, UEH</a></div>
   </section> -->
-  <footer><!-- DOWNLOAD CV BUTTON -->Last Updated: 2021-03. Design on CodePen.</footer>
+  <footer><!-- DOWNLOAD CV BUTTON -->Last Updated: 2023-12. Design on CodePen.</footer>
   
 </div>
   
