--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ a:hover {
       </li>
       <li><a href="https://github.com/elisetnp/" target="_blank"><i class="fa fa-github fa-2x"></i></a></i>
       </li>
-      <li><a href="/"><i class="fa fa-globe fa-2x"></i></a></i>
+      <li><a href="/TRAN_LoM_202404.pdf" target="_blank><i class="fa fa-envelope fa-2x"></i></a></i>
       </li>
     </ul>
   </div>
@@ -284,7 +284,7 @@ a:hover {
     <h2>Work Experience</h2>
     <div class="exp-item">
       <h3>Data Engineer, Free2move <sup>2021 - now</sup> </h3>
-      <p>• Data ingestion, transformation, orchestration (Airflow - full ownership) </p>
+      <p>• Data ingestion, transformation, orchestration </p>
       <p>• Data warehousing (PostgreSQL) & optimization </p>
       <p>• Data visualization tool incident treatment </p>
       <p>• Data product deployment (Python, docker, Kubernetes, Gitlab CI/CD) and documentation </p>
