--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ a:hover {
       </li>
       <li><a href="https://github.com/elisetnp/" target="_blank"><i class="fa fa-github fa-2x"></i></a></i>
       </li>
-      <li><a href="/TRAN_LoM_202404.pdf" target="_blank><i class="fa fa-envelope fa-2x"></i></a></i>
+      <li><a href="/TRAN_LoM_202404.pdf" target="_blank><i class="fa-regular fa-envelope fa-2x"></i></a></i>
       </li>
     </ul>
   </div>
