--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ a:hover {
     <h2>Personal Information</h2>
     <ul>
       <li><i class="fa fa-envelope-o"></i> <span class="email"></span></li>
-      <li><i class="fa fa-paper-plane-o"> </i> Paris, France</li>
+      <li><i class="fa fa-paper-plane-o"> </i>born in Saigon, based in Paris</li>
     </ul>
     <ul>
       <li class="pri-tag">Vietnamese</li>
