Update index.html typo

--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ a:hover {
     <h2>Personal Information</h2>
     <ul>
       <li><i class="fa fa-envelope-o"></i> <span class="email"></span></li>
-      <li><i class="fa fa-paper-plane-o"> </i> born in Saigon, based in Paris</li>
-	<li><i class="fa fa-language"> </i>English, French, Vietnamese, currently learning Japanese</li>
+      <li><i class="fa fa-paper-plane-o"> </i> born in Saigon 🇻🇳 | based in Paris 🇫🇷</li>
+	<li><i class="fa fa-language"> </i> English, French, Vietnamese, currently learning Japanese</li>
     </ul>
     <ul>
       <li class="pri-tag">Vietnamese</li>
