--- a/index.html
+++ b/index.html
@@ -285,15 +285,16 @@ a:hover {
     <h2>Work Experience</h2>
     <div class="exp-item">
       <h3>Data Engineer, Free2move <sup>2021 - now</sup> </h3>
-      <p>• **Data Pipeline Development:** Designed, built, and maintained scalable data pipelines to support real-time and batch data processing.</p>
-	<p>• **ETL/ELT Expertise:** Implemented ETL/ELT processes to integrate data from multiple sources, ensuring data quality and consistency.</p>
-	    <p>• **Data Warehousing:** Developed and optimized data warehouses and data lakes using technologies like SQL, Snowflake, and Redshift.</p>
-	    <p>• **Data Modeling:** Created efficient data models and schemas to support business intelligence and analytics.</p>
-	    <p>• **Programming & Scripting:** Proficient in Python and SQL for data manipulation, analysis, and automation of data tasks.</p>
-	    <p>• **Big Data Technologies:** Hands-on experience with GCP and Databricks for large-scale data processing.</p>
-	    <p>• **Data Platform:** Deployed and managed data solutions.</p>
-	    <p>• **Data Project Management:** Led end-to-end data projects, from requirements gathering and design to deployment and maintenance.</p>
-	    <p>• **Cross-Functional Collaboration:** Collaborated with platform engineers, data scientists, analysts, and business stakeholders.</p>
+	<p>• <strong>Data Pipeline Development:</strong> Designed, built, and maintained scalable data pipelines to support real-time and batch data processing.</p>
+	<p>• <strong>ETL/ELT Expertise:</strong> Implemented ETL/ELT processes to integrate data from multiple sources, ensuring data quality and consistency.</p>
+	<p>• <strong>Data Warehousing:</strong> Developed and optimized data warehouses and data lakes using technologies like SQL, Snowflake, and Redshift.</p>
+	<p>• <strong>Data Modeling:</strong> Created efficient data models and schemas to support business intelligence and analytics.</p>
+	<p>• <strong>Programming & Scripting:</strong> Proficient in Python and SQL for data manipulation, analysis, and automation of data tasks.</p>
+	<p>• <strong>Big Data Technologies:</strong> Hands-on experience with GCP and Databricks for large-scale data processing.</p>
+	<p>• <strong>Data Platform:</strong> Deployed and managed data solutions.</p>
+	<p>• <strong>Data Project Management:</strong> Led end-to-end data projects, from requirements gathering and design to deployment and maintenance.</p>
+	<p>• <strong>Cross-Functional Collaboration:</strong> Collaborated with platform engineers, data scientists, analysts, and business stakeholders.</p>
+
       <p><a href="https://github.com/elisetnp/airflow_monitoring/tree/main" target="_blank">
         • Demo on Airflow Monitoring
       </a></p>
