--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         PPPPPPPPPPPPPP        PPP       
     	
     Hello, is it me you're looking for ?? :>
+	  I created this page years ago pls dont judge my teenage code :*)
 	
 	-->
 
