--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ a:hover {
       <h3>Data Engineer, Free2move <sup>2021 - now</sup> </h3>
 	<p>• <strong>Data Pipeline Development:</strong> Designed, built, and maintained scalable data pipelines to support real-time and batch data processing.</p>
 	<p>• <strong>ETL/ELT Expertise:</strong> Implemented ETL/ELT processes to integrate data from multiple sources, ensuring data quality and consistency.</p>
-	<p>• <strong>Data Warehousing:</strong> Developed and optimized data warehouses and data lakes using technologies like SQL, Snowflake, and Redshift.</p>
+	<p>• <strong>Data Warehousing:</strong> Developed and optimized data warehouses and data lakes using technologies like PostgreSQL and Snowflake</p>
 	<p>• <strong>Data Modeling:</strong> Created efficient data models and schemas to support business intelligence and analytics.</p>
 	<p>• <strong>Programming & Scripting:</strong> Proficient in Python and SQL for data manipulation, analysis, and automation of data tasks.</p>
 	<p>• <strong>Big Data Technologies:</strong> Hands-on experience with GCP and Databricks for large-scale data processing.</p>
