--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ a:hover {
   <div class="profile"></div>
   <div class="name">
     <ul>
-      <li>Elise TRAN</li>
+      <li>Elise Phung TRAN</li>
       <li style="font-size: 0.5em">(Data Engineer @ Free2move)</li>
     </ul>
   </div>
@@ -292,7 +292,7 @@ a:hover {
       <h3>Data Engineer, Free2move <sup>2021 - now</sup> </h3>
     <li><strong>Data Pipeline Development:</strong> Designed, built, and maintained scalable data pipelines to support real-time and batch data processing.</li>
     <li><strong>ETL/ELT Expertise:</strong> Implemented ETL/ELT processes to integrate data from multiple sources, ensuring data quality and consistency.</li>
-    <li><strong>Data Warehousing:</strong> Developed and optimized data warehouses and data lakes using technologies like SQL, Snowflake, and Redshift.</li>
+    <li><strong>Data Warehousing:</strong> Developed and optimized data warehouses and data lakes using technologies like PostgreSQL and Snowflake</li>
     <li><strong>Data Modeling:</strong> Created efficient data models and schemas to support business intelligence and analytics.</li>
     <li><strong>Programming & Scripting:</strong> Proficient in Python and SQL for data manipulation, analysis, and automation of data tasks.</li>
     <li><strong>Big Data Technologies:</strong> Hands-on experience with GCP and Databricks for large-scale data processing.</li>
@@ -304,8 +304,6 @@ a:hover {
       <li><a href="https://github.com/elisetnp/airflow_monitoring/tree/main" target="_blank">
         Demo on Airflow Monitoring
       </a><li>
-      <p>
-      </p>
     </div>
     <div class="exp-item">
       <h3>Data Engineering Apprentice - Data-Driven Marketing, Stellantis <sup>2020 - 2021</sup> </h3>
