--- a/index.html
+++ b/index.html
@@ -305,8 +305,12 @@ a:hover {
     </div>
     <div class="exp-item">
       <h3>Data Engineering Apprentice - Data-Driven Marketing, Stellantis <sup>2020 - 2021</sup> </h3>
-      <p>
-      </p>
+ <li><strong>Data Analysis:</strong> Assisted in analysing large datasets..</li>
+    <li><strong>Data Integration:</strong> Worked on data ingestion and transformation processes, ensuring data quality and consistencys.</li>
+    <li><strong>Machine Learning Models:</strong> Contributed to the development and deployment of machine learning models.</li>
+    <li><strong>Dashboard Development:</strong> Collaborated on creating interactive dashboards.</li>
+    <li><strong>Collaboration with Teams:</strong> Worked closely with data scientists to understand requirements and implement data solutions.</li>
+    <li><strong>Documentation:</strong> Assisted in documenting data processes and creating technical reports.</li>
     </div>
     <div class="exp-item">
       <h3>Research Intern, Télécom Paris <sup>2020</sup> </h3>
