--- a/index.html
+++ b/index.html
@@ -318,17 +318,21 @@ a:hover {
     </ul>
 </div>
 
-    <div class="exp-item">
-      <h3>Research Intern, Télécom Paris <sup>2020</sup> </h3>
-      <p>Research work on microworking
-      </p>
-    </div>
-    <div class="exp-item">
-      <h3>Research Assistant, RITM @ Paris-Sud University <sup>2019</sup> </h3>
-      <p>
-        Research work on digital platforms</p>
-      <p>Participant at the World Conference on Intellectual Capital for Communities: Artificial Intelligence.</p>
-    </div>
+<div class="exp-item">
+    <h3>Research Intern, Télécom Paris <sup>2020</sup></h3>
+    <ul>
+        <li>Research work on microworking.</li>
+	<li>Found out my passion for data and innovation.</li>
+    </ul>
+</div>
+<div class="exp-item">
+    <h3>Research Assistant, RITM @ Paris-Sud University <sup>2019</sup></h3>
+    <ul>
+        <li>Research work on digital platforms.</li>
+        <li>Participant at the World Conference on Intellectual Capital for Communities: Artificial Intelligence.</li>
+    </ul>
+</div>
+
   </section>
 
 <!--
