--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ a:hover {
     <h3>Research Intern, Télécom Paris <sup>2020</sup></h3>
     <ul>
         <li>Research work on microworking.</li>
-	<li>Found out my passion for data and innovation.</li>
+	<li>Discovered a strong passion for data and innovative problem-solving techniques.</li>
     </ul>
 </div>
 <div class="exp-item">
