--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@ a:hover {
 .exp-item ul {
   list-style: square;
   padding-left: 15px;
+  margin-top: 5px;
 }
 .exp-item ul li {
   padding-top: 5px;
