--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ a:hover {
       <li style="font-size: 0.5em">(Data Engineer @ Free2move)</li>
     </ul>
   </div>
-  <h2 class="sm-name">Elise TRAN<br>(Data Engineer @ Free2move)</h2>
+  <h2 class="sm-name">Elise TRAN<br>not (yet) my legal name</h2>
   <div class="social">
     <ul>
       <li><a href="https://www.linkedin.com/in/elisephungtran/" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
