--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ a:hover {
   <div class="name">
     <ul>
       <li>Elise Phung TRAN</li>
-      <li style="font-size: 0.5em">(Data Engineer @ Free2move)</li>
+      <li style="font-size: 0.5em">not (yet) my legal name</li>
     </ul>
   </div>
   <h2 class="sm-name">Elise TRAN<br>not (yet) my legal name</h2>
