--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@ a:hover {
   padding-left: 0;
 }
 
+.block ul li {
+  padding-bottom: 5px;
+}
+
 .info .email::before {
   content: "elisetnp@gmail.com";
 }
