--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ a:hover {
       
     </ul>
   </section>
-  <footer><!-- DOWNLOAD CV BUTTON -->Last Updated: 2023-12. Design on CodePen.</footer>
+  <footer><!-- DOWNLOAD CV BUTTON -->Last Updated: 2024-09.</footer>
   
 </div>
   
