--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ a:hover {
   <div class="name">
     <ul>
       <li>Elise Phung TRAN</li>
-      <li style="font-size: 0.5em">Data Engineer</li>
+      <li style="font-size: 0.5em">Experienced Data Engineer</li>
     </ul>
   </div>
   <h2 class="sm-name">Elise TRAN<br>Data Engineer</h2>
