--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ a:hover {
         <li><strong>Data Integration:</strong> Worked on data ingestion and transformation processes, ensuring data quality and consistency.</li>
         <li><strong>Machine Learning Models:</strong> Contributed to the development and deployment of machine learning models.</li>
         <li><strong>Dashboard Development:</strong> Collaborated on creating interactive dashboards.</li>
-        <li><strong>Collaboration with Teams:</strong> Worked closely with data scientists to understand requirements and implement data solutions.</li>
+        <li><strong>Collaboration:</strong> Worked closely with data consultants to understand requirements and implement data solutions.</li>
         <li><strong>Documentation:</strong> Assisted in documenting data processes and creating technical reports.</li>
     </ul>
 </div>
