--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ a:hover {
         <li><strong>Data Warehousing:</strong> Developed and optimized data warehouses and data lakes using technologies like PostgreSQL and Snowflake.</li>
         <li><strong>Data Modeling:</strong> Created efficient data models and schemas to support business intelligence and analytics.</li>
         <li><strong>Programming & Scripting:</strong> Proficient in Python and SQL for data manipulation, analysis, and automation of data tasks.</li>
-        <li><strong>Big Data Technologies:</strong> Hands-on experience with GCP and Databricks for large-scale data processing.</li>
+        <li><strong>Big Data Technologies:</strong> Hands-on experience for large-scale data processing.</li>
         <li><strong>Data Platform:</strong> Deployed and managed data solutions. <a href="https://github.com/elisetnp/airflow_monitoring/tree/main" target="_blank">Demo on Airflow Monitoring</a></li>
         <li><strong>Data Project Management:</strong> Led end-to-end data projects, from requirements gathering and design to deployment and maintenance.</li>
         <li><strong>Cross-Functional Collaboration:</strong> Collaborated with platform engineers, data scientists, analysts, and business stakeholders.</li>
