--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ a:hover {
     <ul>
         <li><strong>Data Pipeline Development:</strong> Designed, built, and maintained scalable data pipelines to support real-time and batch data processing.</li>
         <li><strong>ETL/ELT Expertise:</strong> Implemented ETL/ELT processes to integrate data from multiple sources, ensuring data quality and consistency.</li>
-        <li><strong>Data Warehousing:</strong> Developed and optimized data warehouses and data lakes using technologies like PostgreSQL and Snowflake.</li>
+        <li><strong>Data Warehousing:</strong> Developed and optimized data warehouse and data lake using technologies like PostgreSQL and Snowflake.</li>
         <li><strong>Data Modeling:</strong> Created efficient data models and schemas to support business intelligence and analytics.</li>
         <li><strong>Programming & Scripting:</strong> Proficient in Python and SQL for data manipulation, analysis, and automation of data tasks.</li>
         <li><strong>Big Data Technologies:</strong> Hands-on experience for large-scale data processing.</li>
