--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ a:hover {
       <li style="font-size: 0.5em">Experienced Data Engineer</li>
     </ul>
   </div>
-  <h2 class="sm-name">Elise TRAN<br>Data Engineer</h2>
+  <h2 class="sm-name">Elise Phung TRAN<br>Experienced Data Engineer</h2>
   <div class="social">
     <ul>
       <li><a href="https://www.linkedin.com/in/elisephungtran/" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
