--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ a:hover {
       
     </ul>
   </section>
-  <footer><!-- DOWNLOAD CV BUTTON -->Last Updated: 2024-09. All written by a certified human being.</footer>
+  <footer><!-- DOWNLOAD CV BUTTON -->Last Updated: 2024-09. All written by a certified human bean.</footer>
   
 </div>
   
