--- a/index.html
+++ b/index.html
@@ -440,10 +440,11 @@ a:hover {
     <ul>
       <li class="pri-tag">Reading</li>
       <li class="pri-tag">Writing</li>
-      <li class="sec-tag">Pragmatic Programming</li>
+      <li class="pri-tag">Pragmatic Programming</li>
       <li class="pri-tag">Social Psychology</li>
       <li class="pri-tag">Blockchain</li>
-      <li class="pri-tag">Data Science</li>
+      <li class="pri-tag">All things Data</li>
+      <li class="pri-tag">All things Engineering</li>
       <li class="pri-tag">Learning new things</li>
       
     </ul>
@@ -467,57 +468,6 @@ a:hover {
     <script src="js/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119411314-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-119411314-1');
-</script> -->
-
-
-<script>
-  // Replace with your GitHub repository and issue number
-  const repoOwner = 'elisetnp';
-  const repoName = 'elisetnp.github.io';
-  const issueNumber = '3'; // Replace with the actual issue number
-
-  // Initialize the like count from GitHub Issue or default to 0
-  fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/issues/${issueNumber}`)
-    .then(response => response.json())
-    .then(data => {
-      var currentLikes = data.reactions['+1'] || 0;
-      document.getElementById("countValue").innerText = currentLikes;
-    })
-    .catch(error => console.error('Error fetching data:', error));
-
-  // JavaScript function to handle the like button click
-  function like() {
-    // Increment the like count
-    currentLikes++;
-
-    // Update the like count display
-    document.getElementById("countValue").innerText = currentLikes;
-
-    // Update the GitHub Issue with the new like count
-    fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/issues/${issueNumber}`, {
-      method: 'PATCH',
-      headers: {
-        'Authorization': 'Bearer YOUR_GITHUB_TOKEN', // Replace with your GitHub token
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({
-        reactions: { '+1': currentLikes }
-      })
-    })
-    .then(response => response.json())
-    .then(data => console.log('Updated issue:', data))
-    .catch(error => console.error('Error updating issue:', error));
-  }
-</script>
 
 
 </body>
